// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`activated protection request 1`] = `
<ContentPane
  addresses={
    Object {
      "addresses": Array [
        Object {
          "address": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
          "isLegalOfficer": false,
          "name": "name",
        },
      ],
      "currentAddress": Object {
        "address": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
        "isLegalOfficer": false,
        "name": "name",
      },
    }
  }
  colors={
    Object {
      "accounts": Object {
        "background": "#0c163d",
        "foreground": "#ffffff",
        "hintColor": "#ffffff99",
        "iconBackground": "#3b6cf4",
        "legalOfficerIcon": Object {
          "category": "legal-officer",
          "id": "account-shield",
        },
      },
      "bottomMenuItems": Object {
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
      },
      "buttons": Object {
        "secondaryBackgroundColor": "#0c163d",
      },
      "dashboard": Object {
        "background": "#0c163d",
        "foreground": "#ffffff",
      },
      "frame": Object {
        "background": "#152665",
        "foreground": "#ffffff",
        "link": "#ffffff",
      },
      "select": Object {
        "background": "#ffffff33",
        "foreground": "#ffffff",
        "menuBackgroundColor": "#152665",
        "selectedOptionBackgroundColor": "#ffffff33",
      },
      "shadowColor": "#3b6cf433",
      "sidebar": Object {
        "activeItemBackground": "#ffffff33",
        "background": "#152665",
        "foreground": "#ffffff",
      },
      "topMenuItems": Object {
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
      },
      "type": "dark",
    }
  }
  mainTitle="My Logion Trust Protection"
  primaryAreaChildren={
    <Frame
      colors={
        Object {
          "accounts": Object {
            "background": "#0c163d",
            "foreground": "#ffffff",
            "hintColor": "#ffffff99",
            "iconBackground": "#3b6cf4",
            "legalOfficerIcon": Object {
              "category": "legal-officer",
              "id": "account-shield",
            },
          },
          "bottomMenuItems": Object {
            "iconGradient": Object {
              "from": "#7a90cb",
              "to": "#3b6cf4",
            },
          },
          "buttons": Object {
            "secondaryBackgroundColor": "#0c163d",
          },
          "dashboard": Object {
            "background": "#0c163d",
            "foreground": "#ffffff",
          },
          "frame": Object {
            "background": "#152665",
            "foreground": "#ffffff",
            "link": "#ffffff",
          },
          "select": Object {
            "background": "#ffffff33",
            "foreground": "#ffffff",
            "menuBackgroundColor": "#152665",
            "selectedOptionBackgroundColor": "#ffffff33",
          },
          "shadowColor": "#3b6cf433",
          "sidebar": Object {
            "activeItemBackground": "#ffffff33",
            "background": "#152665",
            "foreground": "#ffffff",
          },
          "topMenuItems": Object {
            "iconGradient": Object {
              "from": "#3b6cf4",
              "to": "#6050dc",
            },
          },
          "type": "dark",
        }
      }
    >
      <Alert
        variant="info"
      >
        Your Logion Trust Protection is active.
      </Alert>
      <LegalOfficers
        colorTheme={
          Object {
            "accounts": Object {
              "background": "#0c163d",
              "foreground": "#ffffff",
              "hintColor": "#ffffff99",
              "iconBackground": "#3b6cf4",
              "legalOfficerIcon": Object {
                "category": "legal-officer",
                "id": "account-shield",
              },
            },
            "bottomMenuItems": Object {
              "iconGradient": Object {
                "from": "#7a90cb",
                "to": "#3b6cf4",
              },
            },
            "buttons": Object {
              "secondaryBackgroundColor": "#0c163d",
            },
            "dashboard": Object {
              "background": "#0c163d",
              "foreground": "#ffffff",
            },
            "frame": Object {
              "background": "#152665",
              "foreground": "#ffffff",
              "link": "#ffffff",
            },
            "select": Object {
              "background": "#ffffff33",
              "foreground": "#ffffff",
              "menuBackgroundColor": "#152665",
              "selectedOptionBackgroundColor": "#ffffff33",
            },
            "shadowColor": "#3b6cf433",
            "sidebar": Object {
              "activeItemBackground": "#ffffff33",
              "background": "#152665",
              "foreground": "#ffffff",
            },
            "topMenuItems": Object {
              "iconGradient": Object {
                "from": "#3b6cf4",
                "to": "#6050dc",
              },
            },
            "type": "dark",
          }
        }
        legalOfficer1={
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
            "name": "Guillaume",
          }
        }
        legalOfficer1Decision="PENDING"
        legalOfficer2={
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Patrick",
          }
        }
        legalOfficer2Decision="PENDING"
        legalOfficers={Array []}
        mode="view"
        setLegalOfficer1={[Function]}
        setLegalOfficer2={[Function]}
      />
    </Frame>
  }
  primaryPaneWidth={8}
  secondaryAreaChildren={null}
  selectAddress={[MockFunction]}
/>
`;

exports[`activated recovery request 1`] = `
<ContentPane
  addresses={
    Object {
      "addresses": Array [
        Object {
          "address": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
          "isLegalOfficer": false,
          "name": "name",
        },
      ],
      "currentAddress": Object {
        "address": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
        "isLegalOfficer": false,
        "name": "name",
      },
    }
  }
  colors={
    Object {
      "accounts": Object {
        "background": "#0c163d",
        "foreground": "#ffffff",
        "hintColor": "#ffffff99",
        "iconBackground": "#3b6cf4",
        "legalOfficerIcon": Object {
          "category": "legal-officer",
          "id": "account-shield",
        },
      },
      "bottomMenuItems": Object {
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
      },
      "buttons": Object {
        "secondaryBackgroundColor": "#0c163d",
      },
      "dashboard": Object {
        "background": "#0c163d",
        "foreground": "#ffffff",
      },
      "frame": Object {
        "background": "#152665",
        "foreground": "#ffffff",
        "link": "#ffffff",
      },
      "select": Object {
        "background": "#ffffff33",
        "foreground": "#ffffff",
        "menuBackgroundColor": "#152665",
        "selectedOptionBackgroundColor": "#ffffff33",
      },
      "shadowColor": "#3b6cf433",
      "sidebar": Object {
        "activeItemBackground": "#ffffff33",
        "background": "#152665",
        "foreground": "#ffffff",
      },
      "topMenuItems": Object {
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
      },
      "type": "dark",
    }
  }
  mainTitle="Recovery"
  primaryAreaChildren={
    <Frame
      colors={
        Object {
          "accounts": Object {
            "background": "#0c163d",
            "foreground": "#ffffff",
            "hintColor": "#ffffff99",
            "iconBackground": "#3b6cf4",
            "legalOfficerIcon": Object {
              "category": "legal-officer",
              "id": "account-shield",
            },
          },
          "bottomMenuItems": Object {
            "iconGradient": Object {
              "from": "#7a90cb",
              "to": "#3b6cf4",
            },
          },
          "buttons": Object {
            "secondaryBackgroundColor": "#0c163d",
          },
          "dashboard": Object {
            "background": "#0c163d",
            "foreground": "#ffffff",
          },
          "frame": Object {
            "background": "#152665",
            "foreground": "#ffffff",
            "link": "#ffffff",
          },
          "select": Object {
            "background": "#ffffff33",
            "foreground": "#ffffff",
            "menuBackgroundColor": "#152665",
            "selectedOptionBackgroundColor": "#ffffff33",
          },
          "shadowColor": "#3b6cf433",
          "sidebar": Object {
            "activeItemBackground": "#ffffff33",
            "background": "#152665",
            "foreground": "#ffffff",
          },
          "topMenuItems": Object {
            "iconGradient": Object {
              "from": "#3b6cf4",
              "to": "#6050dc",
            },
          },
          "type": "dark",
        }
      }
    >
      <Alert
        variant="info"
      >
        You are now ready to initiate the actual recovery of address 
        toRecover
        .
      </Alert>
      <LegalOfficers
        colorTheme={
          Object {
            "accounts": Object {
              "background": "#0c163d",
              "foreground": "#ffffff",
              "hintColor": "#ffffff99",
              "iconBackground": "#3b6cf4",
              "legalOfficerIcon": Object {
                "category": "legal-officer",
                "id": "account-shield",
              },
            },
            "bottomMenuItems": Object {
              "iconGradient": Object {
                "from": "#7a90cb",
                "to": "#3b6cf4",
              },
            },
            "buttons": Object {
              "secondaryBackgroundColor": "#0c163d",
            },
            "dashboard": Object {
              "background": "#0c163d",
              "foreground": "#ffffff",
            },
            "frame": Object {
              "background": "#152665",
              "foreground": "#ffffff",
              "link": "#ffffff",
            },
            "select": Object {
              "background": "#ffffff33",
              "foreground": "#ffffff",
              "menuBackgroundColor": "#152665",
              "selectedOptionBackgroundColor": "#ffffff33",
            },
            "shadowColor": "#3b6cf433",
            "sidebar": Object {
              "activeItemBackground": "#ffffff33",
              "background": "#152665",
              "foreground": "#ffffff",
            },
            "topMenuItems": Object {
              "iconGradient": Object {
                "from": "#3b6cf4",
                "to": "#6050dc",
              },
            },
            "type": "dark",
          }
        }
        legalOfficer1={
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
            "name": "Guillaume",
          }
        }
        legalOfficer1Decision="PENDING"
        legalOfficer2={
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Patrick",
          }
        }
        legalOfficer2Decision="PENDING"
        legalOfficers={Array []}
        mode="view"
        setLegalOfficer1={[Function]}
        setLegalOfficer2={[Function]}
      />
    </Frame>
  }
  primaryPaneWidth={8}
  secondaryAreaChildren={null}
  selectAddress={[MockFunction]}
/>
`;

exports[`pending protection request 1`] = `
<ContentPane
  addresses={
    Object {
      "addresses": Array [
        Object {
          "address": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
          "isLegalOfficer": false,
          "name": "name",
        },
      ],
      "currentAddress": Object {
        "address": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
        "isLegalOfficer": false,
        "name": "name",
      },
    }
  }
  colors={
    Object {
      "accounts": Object {
        "background": "#0c163d",
        "foreground": "#ffffff",
        "hintColor": "#ffffff99",
        "iconBackground": "#3b6cf4",
        "legalOfficerIcon": Object {
          "category": "legal-officer",
          "id": "account-shield",
        },
      },
      "bottomMenuItems": Object {
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
      },
      "buttons": Object {
        "secondaryBackgroundColor": "#0c163d",
      },
      "dashboard": Object {
        "background": "#0c163d",
        "foreground": "#ffffff",
      },
      "frame": Object {
        "background": "#152665",
        "foreground": "#ffffff",
        "link": "#ffffff",
      },
      "select": Object {
        "background": "#ffffff33",
        "foreground": "#ffffff",
        "menuBackgroundColor": "#152665",
        "selectedOptionBackgroundColor": "#ffffff33",
      },
      "shadowColor": "#3b6cf433",
      "sidebar": Object {
        "activeItemBackground": "#ffffff33",
        "background": "#152665",
        "foreground": "#ffffff",
      },
      "topMenuItems": Object {
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
      },
      "type": "dark",
    }
  }
  mainTitle="My Logion Trust Protection"
  primaryAreaChildren={
    <Frame
      colors={
        Object {
          "accounts": Object {
            "background": "#0c163d",
            "foreground": "#ffffff",
            "hintColor": "#ffffff99",
            "iconBackground": "#3b6cf4",
            "legalOfficerIcon": Object {
              "category": "legal-officer",
              "id": "account-shield",
            },
          },
          "bottomMenuItems": Object {
            "iconGradient": Object {
              "from": "#7a90cb",
              "to": "#3b6cf4",
            },
          },
          "buttons": Object {
            "secondaryBackgroundColor": "#0c163d",
          },
          "dashboard": Object {
            "background": "#0c163d",
            "foreground": "#ffffff",
          },
          "frame": Object {
            "background": "#152665",
            "foreground": "#ffffff",
            "link": "#ffffff",
          },
          "select": Object {
            "background": "#ffffff33",
            "foreground": "#ffffff",
            "menuBackgroundColor": "#152665",
            "selectedOptionBackgroundColor": "#ffffff33",
          },
          "shadowColor": "#3b6cf433",
          "sidebar": Object {
            "activeItemBackground": "#ffffff33",
            "background": "#152665",
            "foreground": "#ffffff",
          },
          "topMenuItems": Object {
            "iconGradient": Object {
              "from": "#3b6cf4",
              "to": "#6050dc",
            },
          },
          "type": "dark",
        }
      }
    >
      <Alert
        variant="warning"
      >
        Mandatory: we detect that the Logion Application needs to be re-synchronized with the Logion Blockchain. To proceed, please click on the button and sign to confirm this operation.
      </Alert>
      <Button
        backgroundColor="#0c163d"
        id="btnConfirmProtection"
        onClick={[Function]}
      >
        Re-Sync Confirmation
      </Button>
      <LegalOfficers
        colorTheme={
          Object {
            "accounts": Object {
              "background": "#0c163d",
              "foreground": "#ffffff",
              "hintColor": "#ffffff99",
              "iconBackground": "#3b6cf4",
              "legalOfficerIcon": Object {
                "category": "legal-officer",
                "id": "account-shield",
              },
            },
            "bottomMenuItems": Object {
              "iconGradient": Object {
                "from": "#7a90cb",
                "to": "#3b6cf4",
              },
            },
            "buttons": Object {
              "secondaryBackgroundColor": "#0c163d",
            },
            "dashboard": Object {
              "background": "#0c163d",
              "foreground": "#ffffff",
            },
            "frame": Object {
              "background": "#152665",
              "foreground": "#ffffff",
              "link": "#ffffff",
            },
            "select": Object {
              "background": "#ffffff33",
              "foreground": "#ffffff",
              "menuBackgroundColor": "#152665",
              "selectedOptionBackgroundColor": "#ffffff33",
            },
            "shadowColor": "#3b6cf433",
            "sidebar": Object {
              "activeItemBackground": "#ffffff33",
              "background": "#152665",
              "foreground": "#ffffff",
            },
            "topMenuItems": Object {
              "iconGradient": Object {
                "from": "#3b6cf4",
                "to": "#6050dc",
              },
            },
            "type": "dark",
          }
        }
        legalOfficer1={
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
            "name": "Guillaume",
          }
        }
        legalOfficer1Decision="PENDING"
        legalOfficer2={
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Patrick",
          }
        }
        legalOfficer2Decision="PENDING"
        legalOfficers={Array []}
        mode="view"
        setLegalOfficer1={[Function]}
        setLegalOfficer2={[Function]}
      />
    </Frame>
  }
  primaryPaneWidth={8}
  secondaryAreaChildren={null}
  selectAddress={[MockFunction]}
/>
`;

exports[`pending recovery request 1`] = `
<ContentPane
  addresses={
    Object {
      "addresses": Array [
        Object {
          "address": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
          "isLegalOfficer": false,
          "name": "name",
        },
      ],
      "currentAddress": Object {
        "address": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
        "isLegalOfficer": false,
        "name": "name",
      },
    }
  }
  colors={
    Object {
      "accounts": Object {
        "background": "#0c163d",
        "foreground": "#ffffff",
        "hintColor": "#ffffff99",
        "iconBackground": "#3b6cf4",
        "legalOfficerIcon": Object {
          "category": "legal-officer",
          "id": "account-shield",
        },
      },
      "bottomMenuItems": Object {
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
      },
      "buttons": Object {
        "secondaryBackgroundColor": "#0c163d",
      },
      "dashboard": Object {
        "background": "#0c163d",
        "foreground": "#ffffff",
      },
      "frame": Object {
        "background": "#152665",
        "foreground": "#ffffff",
        "link": "#ffffff",
      },
      "select": Object {
        "background": "#ffffff33",
        "foreground": "#ffffff",
        "menuBackgroundColor": "#152665",
        "selectedOptionBackgroundColor": "#ffffff33",
      },
      "shadowColor": "#3b6cf433",
      "sidebar": Object {
        "activeItemBackground": "#ffffff33",
        "background": "#152665",
        "foreground": "#ffffff",
      },
      "topMenuItems": Object {
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
      },
      "type": "dark",
    }
  }
  mainTitle="Recovery"
  primaryAreaChildren={
    <Frame
      colors={
        Object {
          "accounts": Object {
            "background": "#0c163d",
            "foreground": "#ffffff",
            "hintColor": "#ffffff99",
            "iconBackground": "#3b6cf4",
            "legalOfficerIcon": Object {
              "category": "legal-officer",
              "id": "account-shield",
            },
          },
          "bottomMenuItems": Object {
            "iconGradient": Object {
              "from": "#7a90cb",
              "to": "#3b6cf4",
            },
          },
          "buttons": Object {
            "secondaryBackgroundColor": "#0c163d",
          },
          "dashboard": Object {
            "background": "#0c163d",
            "foreground": "#ffffff",
          },
          "frame": Object {
            "background": "#152665",
            "foreground": "#ffffff",
            "link": "#ffffff",
          },
          "select": Object {
            "background": "#ffffff33",
            "foreground": "#ffffff",
            "menuBackgroundColor": "#152665",
            "selectedOptionBackgroundColor": "#ffffff33",
          },
          "shadowColor": "#3b6cf433",
          "sidebar": Object {
            "activeItemBackground": "#ffffff33",
            "background": "#152665",
            "foreground": "#ffffff",
          },
          "topMenuItems": Object {
            "iconGradient": Object {
              "from": "#3b6cf4",
              "to": "#6050dc",
            },
          },
          "type": "dark",
        }
      }
    >
      <Alert
        variant="warning"
      >
        Mandatory: we detect that the Logion Application needs to be re-synchronized with the Logion Blockchain. To proceed, please click on the button and sign to confirm this operation.
      </Alert>
      <Button
        backgroundColor="#0c163d"
        id="btnConfirmProtection"
        onClick={[Function]}
      >
        Re-Sync Confirmation
      </Button>
      <LegalOfficers
        colorTheme={
          Object {
            "accounts": Object {
              "background": "#0c163d",
              "foreground": "#ffffff",
              "hintColor": "#ffffff99",
              "iconBackground": "#3b6cf4",
              "legalOfficerIcon": Object {
                "category": "legal-officer",
                "id": "account-shield",
              },
            },
            "bottomMenuItems": Object {
              "iconGradient": Object {
                "from": "#7a90cb",
                "to": "#3b6cf4",
              },
            },
            "buttons": Object {
              "secondaryBackgroundColor": "#0c163d",
            },
            "dashboard": Object {
              "background": "#0c163d",
              "foreground": "#ffffff",
            },
            "frame": Object {
              "background": "#152665",
              "foreground": "#ffffff",
              "link": "#ffffff",
            },
            "select": Object {
              "background": "#ffffff33",
              "foreground": "#ffffff",
              "menuBackgroundColor": "#152665",
              "selectedOptionBackgroundColor": "#ffffff33",
            },
            "shadowColor": "#3b6cf433",
            "sidebar": Object {
              "activeItemBackground": "#ffffff33",
              "background": "#152665",
              "foreground": "#ffffff",
            },
            "topMenuItems": Object {
              "iconGradient": Object {
                "from": "#3b6cf4",
                "to": "#6050dc",
              },
            },
            "type": "dark",
          }
        }
        legalOfficer1={
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
            "name": "Guillaume",
          }
        }
        legalOfficer1Decision="PENDING"
        legalOfficer2={
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Patrick",
          }
        }
        legalOfficer2Decision="PENDING"
        legalOfficers={Array []}
        mode="view"
        setLegalOfficer1={[Function]}
        setLegalOfficer2={[Function]}
      />
    </Frame>
  }
  primaryPaneWidth={8}
  secondaryAreaChildren={null}
  selectAddress={[MockFunction]}
/>
`;

exports[`protection request 1`] = `
<ContentPane
  addresses={
    Object {
      "addresses": Array [
        Object {
          "address": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
          "isLegalOfficer": false,
          "name": "name",
        },
      ],
      "currentAddress": Object {
        "address": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
        "isLegalOfficer": false,
        "name": "name",
      },
    }
  }
  colors={
    Object {
      "accounts": Object {
        "background": "#0c163d",
        "foreground": "#ffffff",
        "hintColor": "#ffffff99",
        "iconBackground": "#3b6cf4",
        "legalOfficerIcon": Object {
          "category": "legal-officer",
          "id": "account-shield",
        },
      },
      "bottomMenuItems": Object {
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
      },
      "buttons": Object {
        "secondaryBackgroundColor": "#0c163d",
      },
      "dashboard": Object {
        "background": "#0c163d",
        "foreground": "#ffffff",
      },
      "frame": Object {
        "background": "#152665",
        "foreground": "#ffffff",
        "link": "#ffffff",
      },
      "select": Object {
        "background": "#ffffff33",
        "foreground": "#ffffff",
        "menuBackgroundColor": "#152665",
        "selectedOptionBackgroundColor": "#ffffff33",
      },
      "shadowColor": "#3b6cf433",
      "sidebar": Object {
        "activeItemBackground": "#ffffff33",
        "background": "#152665",
        "foreground": "#ffffff",
      },
      "topMenuItems": Object {
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
      },
      "type": "dark",
    }
  }
  mainTitle="My Logion Trust Protection"
  primaryAreaChildren={
    <Frame
      colors={
        Object {
          "accounts": Object {
            "background": "#0c163d",
            "foreground": "#ffffff",
            "hintColor": "#ffffff99",
            "iconBackground": "#3b6cf4",
            "legalOfficerIcon": Object {
              "category": "legal-officer",
              "id": "account-shield",
            },
          },
          "bottomMenuItems": Object {
            "iconGradient": Object {
              "from": "#7a90cb",
              "to": "#3b6cf4",
            },
          },
          "buttons": Object {
            "secondaryBackgroundColor": "#0c163d",
          },
          "dashboard": Object {
            "background": "#0c163d",
            "foreground": "#ffffff",
          },
          "frame": Object {
            "background": "#152665",
            "foreground": "#ffffff",
            "link": "#ffffff",
          },
          "select": Object {
            "background": "#ffffff33",
            "foreground": "#ffffff",
            "menuBackgroundColor": "#152665",
            "selectedOptionBackgroundColor": "#ffffff33",
          },
          "shadowColor": "#3b6cf433",
          "sidebar": Object {
            "activeItemBackground": "#ffffff33",
            "background": "#152665",
            "foreground": "#ffffff",
          },
          "topMenuItems": Object {
            "iconGradient": Object {
              "from": "#3b6cf4",
              "to": "#6050dc",
            },
          },
          "type": "dark",
        }
      }
    >
      <Alert
        variant="info"
      >
        Your Logion Trust Protection request has been submitted. Your Legal Officers will contact you as soon as possible to finalize the KYC process. Please note that, after the successful completion of one of your Legal Officer approval processes, you will be able to use all features provided by your logion account dashboard.
      </Alert>
      <LegalOfficers
        colorTheme={
          Object {
            "accounts": Object {
              "background": "#0c163d",
              "foreground": "#ffffff",
              "hintColor": "#ffffff99",
              "iconBackground": "#3b6cf4",
              "legalOfficerIcon": Object {
                "category": "legal-officer",
                "id": "account-shield",
              },
            },
            "bottomMenuItems": Object {
              "iconGradient": Object {
                "from": "#7a90cb",
                "to": "#3b6cf4",
              },
            },
            "buttons": Object {
              "secondaryBackgroundColor": "#0c163d",
            },
            "dashboard": Object {
              "background": "#0c163d",
              "foreground": "#ffffff",
            },
            "frame": Object {
              "background": "#152665",
              "foreground": "#ffffff",
              "link": "#ffffff",
            },
            "select": Object {
              "background": "#ffffff33",
              "foreground": "#ffffff",
              "menuBackgroundColor": "#152665",
              "selectedOptionBackgroundColor": "#ffffff33",
            },
            "shadowColor": "#3b6cf433",
            "sidebar": Object {
              "activeItemBackground": "#ffffff33",
              "background": "#152665",
              "foreground": "#ffffff",
            },
            "topMenuItems": Object {
              "iconGradient": Object {
                "from": "#3b6cf4",
                "to": "#6050dc",
              },
            },
            "type": "dark",
          }
        }
        legalOfficer1={
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
            "name": "Guillaume",
          }
        }
        legalOfficer1Decision="PENDING"
        legalOfficer2={
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Patrick",
          }
        }
        legalOfficer2Decision="PENDING"
        legalOfficers={Array []}
        mode="view"
        setLegalOfficer1={[Function]}
        setLegalOfficer2={[Function]}
      />
    </Frame>
  }
  primaryPaneWidth={8}
  secondaryAreaChildren={null}
  selectAddress={[MockFunction]}
/>
`;

exports[`recovery request 1`] = `
<ContentPane
  addresses={
    Object {
      "addresses": Array [
        Object {
          "address": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
          "isLegalOfficer": false,
          "name": "name",
        },
      ],
      "currentAddress": Object {
        "address": "5H4MvAsobfZ6bBCDyj5dsrWYLrA8HrRzaqa9p61UXtxMhSCY",
        "isLegalOfficer": false,
        "name": "name",
      },
    }
  }
  colors={
    Object {
      "accounts": Object {
        "background": "#0c163d",
        "foreground": "#ffffff",
        "hintColor": "#ffffff99",
        "iconBackground": "#3b6cf4",
        "legalOfficerIcon": Object {
          "category": "legal-officer",
          "id": "account-shield",
        },
      },
      "bottomMenuItems": Object {
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
      },
      "buttons": Object {
        "secondaryBackgroundColor": "#0c163d",
      },
      "dashboard": Object {
        "background": "#0c163d",
        "foreground": "#ffffff",
      },
      "frame": Object {
        "background": "#152665",
        "foreground": "#ffffff",
        "link": "#ffffff",
      },
      "select": Object {
        "background": "#ffffff33",
        "foreground": "#ffffff",
        "menuBackgroundColor": "#152665",
        "selectedOptionBackgroundColor": "#ffffff33",
      },
      "shadowColor": "#3b6cf433",
      "sidebar": Object {
        "activeItemBackground": "#ffffff33",
        "background": "#152665",
        "foreground": "#ffffff",
      },
      "topMenuItems": Object {
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
      },
      "type": "dark",
    }
  }
  mainTitle="Recovery"
  primaryAreaChildren={
    <Frame
      colors={
        Object {
          "accounts": Object {
            "background": "#0c163d",
            "foreground": "#ffffff",
            "hintColor": "#ffffff99",
            "iconBackground": "#3b6cf4",
            "legalOfficerIcon": Object {
              "category": "legal-officer",
              "id": "account-shield",
            },
          },
          "bottomMenuItems": Object {
            "iconGradient": Object {
              "from": "#7a90cb",
              "to": "#3b6cf4",
            },
          },
          "buttons": Object {
            "secondaryBackgroundColor": "#0c163d",
          },
          "dashboard": Object {
            "background": "#0c163d",
            "foreground": "#ffffff",
          },
          "frame": Object {
            "background": "#152665",
            "foreground": "#ffffff",
            "link": "#ffffff",
          },
          "select": Object {
            "background": "#ffffff33",
            "foreground": "#ffffff",
            "menuBackgroundColor": "#152665",
            "selectedOptionBackgroundColor": "#ffffff33",
          },
          "shadowColor": "#3b6cf433",
          "sidebar": Object {
            "activeItemBackground": "#ffffff33",
            "background": "#152665",
            "foreground": "#ffffff",
          },
          "topMenuItems": Object {
            "iconGradient": Object {
              "from": "#3b6cf4",
              "to": "#6050dc",
            },
          },
          "type": "dark",
        }
      }
    >
      <Alert
        variant="info"
      >
        Your Logion Recovery request
         for account toRecover
         has been submitted. Your Legal Officers will contact you as soon as possible to finalize the KYC process.
      </Alert>
      <LegalOfficers
        colorTheme={
          Object {
            "accounts": Object {
              "background": "#0c163d",
              "foreground": "#ffffff",
              "hintColor": "#ffffff99",
              "iconBackground": "#3b6cf4",
              "legalOfficerIcon": Object {
                "category": "legal-officer",
                "id": "account-shield",
              },
            },
            "bottomMenuItems": Object {
              "iconGradient": Object {
                "from": "#7a90cb",
                "to": "#3b6cf4",
              },
            },
            "buttons": Object {
              "secondaryBackgroundColor": "#0c163d",
            },
            "dashboard": Object {
              "background": "#0c163d",
              "foreground": "#ffffff",
            },
            "frame": Object {
              "background": "#152665",
              "foreground": "#ffffff",
              "link": "#ffffff",
            },
            "select": Object {
              "background": "#ffffff33",
              "foreground": "#ffffff",
              "menuBackgroundColor": "#152665",
              "selectedOptionBackgroundColor": "#ffffff33",
            },
            "shadowColor": "#3b6cf433",
            "sidebar": Object {
              "activeItemBackground": "#ffffff33",
              "background": "#152665",
              "foreground": "#ffffff",
            },
            "topMenuItems": Object {
              "iconGradient": Object {
                "from": "#3b6cf4",
                "to": "#6050dc",
              },
            },
            "type": "dark",
          }
        }
        legalOfficer1={
          Object {
            "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
            "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France",
            "name": "Guillaume",
          }
        }
        legalOfficer1Decision="PENDING"
        legalOfficer2={
          Object {
            "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "details": "Modero Bruxelles
Central administration 
Nijverheidslaan 1
B - 1853 Grimbergen (Strombeek-Bever)
Belgium",
            "name": "Patrick",
          }
        }
        legalOfficer2Decision="PENDING"
        legalOfficers={Array []}
        mode="view"
        setLegalOfficer1={[Function]}
        setLegalOfficer2={[Function]}
      />
    </Frame>
  }
  primaryPaneWidth={8}
  secondaryAreaChildren={null}
  selectAddress={[MockFunction]}
  subTitle="Recovery process status"
/>
`;
